# blog-rust

./: Cargo.toml  README.md
examples/: api_demo.sh
migrations/2025-03-19-220457_create_posts/: up.sql
migrations/2025-03-20-211640_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  posts.rs  schema.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs  post_service.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  post.rs
src/domain/ports/: mod.rs  post_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/persistence/: mod.rs  models.rs  sqlite_post_repository.rs
src/infrastructure/web/handlers/: mod.rs  post_handler.rs
src/infrastructure/web/models/: mod.rs  post_dto.rs
