[package]
name = "blog-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
